# vk_sandox

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt
cmake/: utils.cmake
src/: CMakeLists.txt
src/libs/: CMakeLists.txt
src/libs/gltf/: CMakeLists.txt
src/libs/gltf/gltf/: glb_parser.cpp  glb_parser.hpp  gltf_base.cpp  gltf_base.hpp  gltf_vk.cpp  gltf_vk.hpp  utils.cpp  utils.hpp  vk_utils.cpp  vk_utils.hpp
src/libs/gltf/gltf/resources/: skinning.comp
src/libs/hal/: CMakeLists.txt
src/libs/hal/dll/: CMakeLists.txt
src/libs/hal/dll/dll/: libraries_loader.cpp  libraries_loader.hpp
src/libs/hal/filesystem/: CMakeLists.txt
src/libs/hal/filesystem/filesystem/: base.file.cpp  base_file.hpp  common_file.cpp  common_file.hpp
src/libs/hal/hal/render/vk/: context.cpp  context.hpp  raii.cpp  raii.hpp  vma.cpp
src/libs/hal/hal/window/: glfw_window.cpp  window.cpp  window.hpp
src/libs/hal/render/: CMakeLists.txt
src/libs/hal/render/render/vk/: context.cpp  context.hpp  errors_handling.cpp  errors_handling.hpp  raii.hpp  resources.cpp  resources.hpp  utils.cpp  utils.hpp  vulkan_dependencies.hpp
src/libs/hal/render/render/vk/resources/: buffer.cpp  buffer.hpp  frame.cpp  frame.hpp  image.cpp  image.hpp  pass.cpp  pass.hpp  pipeline.cpp  pipeline.hpp  resources_all.hpp  sampler.cpp  sampler.hpp
src/libs/hal/renderdoc/: CMakeLists.txt
src/libs/hal/renderdoc/renderdoc/: renderdoc.cpp  renderdoc.hpp
src/libs/hal/window/: CMakeLists.txt
src/libs/hal/window/window/: glfw_window.cpp  vk_main_loop_update_listener.hpp  window.cpp  window.hpp
src/libs/utils/: CMakeLists.txt
src/libs/utils/utils/: conditions_helpers.cpp  conditions_helpers.hpp  data.cpp  data.hpp  event.hpp  scope_helpers.cpp  scope_helpers.hpp
src/samples/: CMakeLists.txt
src/samples/sample_app/: CMakeLists.txt  sample_app.cpp  sample_app.hpp
src/samples/test_glfw/: CMakeLists.txt  main.cpp
src/samples/test_glfw/resources/: test.frag  test.vert
src/samples/test_gltf/: CMakeLists.txt  main.cpp
src/samples/test_gltf/resources/: skinning.comp  test.frag  test.vert
src/samples/utils/: CMakeLists.txt  gltf_vk_primitive_renderer.cpp  gltf_vk_primitive_renderer.hpp
src/third/: CMakeLists.txt
src/third/renderdoc/: CMakeLists.txt
src/third/stb/: CMakeLists.txt
